<resources>
    <string name="app_name">HMTHY</string>
    <string name="title_activity_inicio">Inicio</string>

    <!-- Pantalla de inicio-->
    <string name="Iniciotext">Bienvenido a\nhelp me to help you</string>
    <string name="TextBtn1">Iniciar Charla</string>
    <string name="TextBtn2">Contactarnos</string>
    <string name="TextBtn3">Salir de la aplicación</string>

    <!-- Patalla de opciones -->
    <string name="OpcionesText">¿Qué te apetece hacer hoy?</string>
    <string name="TextBtn4">Hablar de mi dia</string>
    <string name="TextBtn5">Desahogarme</string>
    <string name="TextBtn6">Pedir un consejo</string>

    <!-- Pantalla de Contacto -->
    <string name="LabeltextC">Puedes contactarnos por medio del correo\nHtoH@gmail.com</string>
    <string name="TextBtn7">Mandar correo</string>
    <string name="AnotacionC">Los unicos correos leidos seran aquellos con el asunto de sugerencias las cuale leeremos y guardares en una bas de datos para ir mejorando HtoH\n\nGRACIAS POR SU APOYO</string>

    <!-- Pantalla de hablar -->
    <string name="LabelTextH">Muy bien\nyo te escuchare\nquerido usuario</string>
    <string name="TxtDia">Aquí puedes contarme tu dia</string>
    <string name="TextBtn8">Enviar mi día</string>
</resources>